Correction de la navigitaon avec smooth-scrollbar

--- a/components/layouts/navbar/navbar.module.css
+++ b/components/layouts/navbar/navbar.module.css
@@ -1,5 +1,5 @@
 .navbar{
-    z-index: 99;
+    z-index: 9999999999;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
